Add serving of client from server.

--- a/src/client/static/index.html
+++ b/src/client/static/index.html
@@ -13,11 +13,11 @@
     <link rel="shortcut icon" href="/out/client/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/out/client/favicon.ico" type="image/x-icon">
   
-    <link rel="stylesheet" href="/out/client/app.css" media="screen">
+    <link rel="stylesheet" href="/out/client/client.css" media="screen">
   </head>
 
   <body>
     <div id="app"></div>
-    <script src="/out/client/app.js"></script>
+    <script src="/out/client/client.js"></script>
   </body>
 </html>
