--- a/src/client/static/index.html
+++ b/src/client/static/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="app">Loading ...</div>
     <script src="/out/client/client.js"></script>
   </body>
 </html>
