Moved resources to /real

--- a/src/client/static/index.html
+++ b/src/client/static/index.html
@@ -10,14 +10,14 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <link rel="shortcut icon" href="/out/client/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/out/client/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/real/client/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/real/client/favicon.ico" type="image/x-icon">
   
-    <link rel="stylesheet" href="/out/client/client.css" media="screen">
+    <link rel="stylesheet" href="/real/client/client.css" media="screen">
   </head>
 
   <body>
     <div id="app">Loading ...</div>
-    <script src="/out/client/client.js"></script>
+    <script src="/real/client/client.js"></script>
   </body>
 </html>
