--- a/src/client/static/index.html
+++ b/src/client/static/index.html
@@ -17,6 +17,25 @@
   </head>
 
   <body>
+    <script>
+      window.fbAsyncInit = function() {
+          FB.init({
+              appId      : '{{{ FACEBOOK_APP_ID }}}',
+              xfbml      : true,
+              version    : 'v2.9'
+          });
+          FB.AppEvents.logPageView();
+      };
+
+      (function(d, s, id){
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) {return;}
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/en_US/sdk.js";
+          fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
+    
     <div id="app">Loading ...</div>
     <script src="/real/client/client.js"></script>
   </body>
