Pass in initial config data the same way initial config is.
A big simplification in how things are done on the server and client side!

--- a/src/shared/static/index.html
+++ b/src/shared/static/index.html
@@ -38,7 +38,8 @@
     
     <div id="app">{{{ APP_HTML }}}</div>
     <script>
-      window.__NEONCITY_INITIAL_STATE = {{{ APP_INITIAL_STATE }}};
+      window.__NEONCITY_CLIENT_CONFIG = {{{ CLIENT_CONFIG }}};
+      window.__NEONCITY_CLIENT_INITIAL_STATE = {{{ CLIENT_INITIAL_STATE }}};
     </script>
     <script src="/real/client/client.js"></script>
   </body>
