Add a humans.txt

--- a/src/shared/static/index.html
+++ b/src/shared/static/index.html
@@ -14,6 +14,7 @@
     <link rel="icon" href="/real/client/favicon.ico" type="image/x-icon">
   
     <link rel="stylesheet" href="/real/client/client.css" media="screen">
+    <link rel="author" href="/humans.txt" />
   </head>
 
   <body>
