Wicked generation of title element in head

--- a/src/shared/static/index.html
+++ b/src/shared/static/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>NeonCity</title>
+    {{{ PAGE_TITLE_HTML }}}
 
     <meta name="description" content="NeonCity">
     <meta name="keywords" content="NeonCity">
