Generate the description

--- a/src/shared/static/index.html
+++ b/src/shared/static/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     {{{ PAGE_TITLE_HTML }}}
 
-    <meta name="description" content="NeonCity">
-    <meta name="keywords" content="NeonCity">
+    <meta name="keywords" content="crowdfunding, social causes, donation">
     <meta name="author" content="NeonCity team">
+    {{{ PAGE_META_HTML }}}
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
