Add the rel=canonical link

--- a/src/shared/static/index.html
+++ b/src/shared/static/index.html
@@ -8,6 +8,8 @@
     <meta name="author" content="NeonCity team">
     {{{ PAGE_META_HTML }}}
 
+    {{{ PAGE_LINK_HTML }}}
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <link rel="shortcut icon" href="/real/client/favicon.ico" type="image/x-icon">
